RESOLVED FIXED267124
Bank of America crashes on launch when using ServiceExtensions XPC services
https://bugs.webkit.org/show_bug.cgi?id=267124
Summary Bank of America crashes on launch when using ServiceExtensions XPC services
Per Arne Vollan
Reported 2024-01-05 00:47:33 PST
Fix crash on launch of WebKit processes, if the process launcher is deleted early.
Attachments
Per Arne Vollan
Comment 1 2024-01-05 00:47:45 PST
Per Arne Vollan
Comment 2 2024-01-05 00:54:43 PST
EWS
Comment 3 2024-01-05 07:41:09 PST
Committed 272686@main (9419ea9f50b8): <https://commits.webkit.org/272686@main> Reviewed commits have been landed. Closing PR #22425 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.