Bank of America crashes on launch when using ServiceExtensions XPC services https://bugs.webkit.org/show_bug.cgi?id=267124 rdar://119993070

Reviewed by Wenson Hsieh.

Fix crash on launch of WebKit processes, if the process launcher is deleted early. Create the XPC connection
after we have verified that we have a process launcher, otherwise we will get a XPC misuse crash because
the connection will be deleted in a resumed state.

* Source/WebKit/UIProcess/Launcher/cocoa/ProcessLauncherCocoa.mm:
(WebKit::ProcessLauncher::launchProcess):

Canonical link: https://commits.webkit.org/272686@main